# mu

./: CMakeLists.txt  MyGame.cpp  MyGame.hpp  index.html
cmake/: config.cmake
cmake/platform/: ios.cmake
mu/core/: GL.hpp  Game.cpp  Game.hpp
platform/android/: main.cpp
platform/desktop/: main.cpp
platform/ios/Template/Template/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist  main.m
platform/ios/Template/Template.xcodeproj/: project.pbxproj
platform/ios/Template/Template.xcodeproj/project.xcworkspace/xcuserdata/jeremie.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/Template/Template.xcodeproj/xcuserdata/jeremie.xcuserdatad/xcschemes/: Template.xcscheme  xcschememanagement.plist
platform/ios/Template/Template/Base.lproj/: LaunchScreen.xib
platform/ios/Template/Template/Frameworks/mu.framework/: Headers  mu
platform/ios/Template/Template/Frameworks/mu.framework/Versions/: Current
platform/ios/Template/Template/Frameworks/mu.framework/Versions/A/: mu
platform/ios/Template/Template/Frameworks/mu.framework/Versions/A/Headers/core/: GL.hpp
platform/ios/Template/Template/Frameworks/mu.framework/Versions/A/Headers/utils/: Timer.hpp
platform/ios/Template/Template/Shaders/: Shader.fsh  Shader.vsh
platform/ios/Template/TemplateTests/: Info.plist  TemplateTests.m
platform/web/: main.cpp
